# radlands

./: DEPLOY_RENDER.md  README.md  app.py  build.sh  index.html  pyproject.toml  replit.md  requirements.txt  tailwind.config.ts  vite.config.ts
attached_assets/: Pasted-Roadmap-para-Desenvolvimento-da-Aplica-o-de-Aux-lio-ao-Jogo-Radlands-A-aplica-o-ser-desenvolvida--1759589487466_1759589487524.txt
backend/: __init__.py  models.py  routes.py  seeds.py
src/: App.tsx  index.css
src/components/: BoardColumn.tsx  EventQueue.tsx  TurnPhases.tsx  WaterTracker.tsx
src/pages/: CardDatabase.tsx  GameSetup.tsx  GameTracker.tsx  Index.tsx
src/radlands_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
