[project]
name = "radlands-app"
version = "0.1.0"
description = "Radlands Game Companion App - Backend API"
authors = [
    {name = "Radlands Team", email = "dev@radlands.app"}
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-sqlalchemy>=3.1.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
